--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,33 +8,6 @@ project(Magrathea)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 #
-# Setup Qt stuff
-#
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(QT5_DIR /usr/local/Cellar/qt/5.13.0)
-list(APPEND CMAKE_PREFIX_PATH ${QT5_DIR})
-set(Qt5Widgets_DIR ${QT5_DIR}/lib/cmake/Qt5Core)
-set(Qt5Gui_DIR ${QT5_DIR}/lib/cmake/Qt5Gui)
-set(Qt5Widgets_DIR ${QT5_DIR}/lib/cmake/Qt5Widgets)
-set(Qt5Multimedia_DIR ${QT5_DIR}/lib/cmake/Qt5Multimedia)
-set(Qt5MultimediaWidgets_DIR ${QT5_DIR}/lib/cmake/Qt5MultimediaWidgets)
-
-# Instruct CMake to run moc automatically when needed
-set(CMAKE_AUTOMOC ON)
-
-# Create code from a list of Qt designer ui files
-set(CMAKE_AUTOUIC ON)
-
-# Find the QtWidgets library
-find_package(Qt5Core CONFIG REQUIRED)
-find_package(Qt5Gui CONFIG REQUIRED)
-find_package(Qt5Widgets CONFIG REQUIRED)
-find_package(Qt5Multimedia CONFIG REQUIRED)
-find_package(Qt5MultimediaWidgets CONFIG REQUIRED)
-find_package(Qt5SerialPort CONFIG REQUIRED)
-
-
-#
 # Find OpenCV
 #
 find_package( OpenCV REQUIRED )
@@ -52,6 +25,39 @@ add_library(alglib STATIC ${alglib_SOURCES})
 add_executable(test-flatness test-flatness.cc flatness.cc alglibtools.cc)
 target_link_libraries(test-flatness alglib)	
 
+# Test transforms
+add_executable(test-matrix test-matrix.cc MatrixTransform.cc PetalCoordinates.cc)
+
+
+
+#
+# Setup Qt stuff
+#
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(QT5_DIR /usr/local/Cellar/qt/5.13.0)
+list(APPEND CMAKE_PREFIX_PATH ${QT5_DIR})
+set(Qt5Widgets_DIR ${QT5_DIR}/lib/cmake/Qt5Core)
+set(Qt5Gui_DIR ${QT5_DIR}/lib/cmake/Qt5Gui)
+set(Qt5Widgets_DIR ${QT5_DIR}/lib/cmake/Qt5Widgets)
+set(Qt5Multimedia_DIR ${QT5_DIR}/lib/cmake/Qt5Multimedia)
+set(Qt5MultimediaWidgets_DIR ${QT5_DIR}/lib/cmake/Qt5MultimediaWidgets)
+
+
+# Find the QtWidgets library
+find_package(Qt5Core CONFIG REQUIRED)
+find_package(Qt5Gui CONFIG REQUIRED)
+find_package(Qt5Widgets CONFIG REQUIRED)
+find_package(Qt5Multimedia CONFIG REQUIRED)
+find_package(Qt5MultimediaWidgets CONFIG REQUIRED)
+find_package(Qt5SerialPort CONFIG REQUIRED)
+
+
+# Instruct CMake to run moc automatically when needed
+set(CMAKE_AUTOMOC ON)
+
+# Create code from a list of Qt designer ui files
+set(CMAKE_AUTOUIC ON)
+
 set(magrathea_SOURCES
 	magrathea.ui
 	main.cpp 
@@ -64,7 +70,10 @@ set(magrathea_SOURCES
 	verticalalignmenttool.cpp 
 	flatness.cc
 	alglibtools.cc
+	MatrixTransform.cc
+	PetalCoordinates.cc
 	)
+	
 add_executable(magrathea ${magrathea_SOURCES})
 # CHOSE IFIC MOTION CONTROLLER
 #target_compile_definitions(magrathea PUBLIC -DACSC=1 -DVALENCIA=1)
